1. Улучшение обработки исключений. 2. Добавление static методов. 3. Изменение formatted. 4. Переименование методов.